--- a/IdentityApp/appsettings.ubuntu.local.json
+++ b/IdentityApp/appsettings.ubuntu.local.json
@@ -11,8 +11,8 @@
     "Type": "PostGreSql"
   },
   "ConnectionStrings": {
-    "AppDataConnection": "Server=localhost;Database=IdentityAppData;User Id=sa;Password=@Domy5506987;",
-    "IdentityAppIdentityDbContextConnection": "Server=localhost;Database=IdentityApp;User Id=sa;Password=@Domy5506987;"
+    "AppDataConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityAppData;MultipleActiveResultSets=true",
+    "IdentityAppIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "PsqlConnectionStrings": {
     "AppDataConnection": "Host=localhost;Database=IdentityAppData;Username=postgres;Password=@Domy5506987;",
@@ -21,5 +21,10 @@
   "JWTBearerTokens": {
     "ExpiryMins": "60",
     "Key": "mySuperSecretKey"
-  }
+  },
+  "KeyVaultName": "EdwardDotNetKeyValut",
+  "AzureADApplicationId": "3351ecc3-c5e2-4077-8a52-0e78bcc8c410",
+  "AzureADCertThumbprint": "CA1A2C43BC244FADB5A05A7CB50625F62EF8838D",
+  "AzureADDirectoryId": "f60d6fff-97e3-47cd-9593-53f83272e2e6"
+
 }
